# pcapper

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  pytest.ini  requirements.txt
pcapper/: __init__.py  aim.py  analyzer.py  arp.py  bacnet.py  baseline.py  beacon.py  bench.py  bsap.py  carving.py  certificates.py  cip.py  cli.py  coap.py  coloring.py  compromised.py  config.py  control_loop.py  correlation.py  creds.py  crimson.py  csp.py  ctf.py  decode.py  decryption.py  device_detection.py  df1.py  dhcp.py  discovery.py  dnp3.py  dns.py  domain.py  email.py  encrypted_dns.py  enip.py  enip_mappings.json  equipment.py  ethercat.py  exfil.py  exporting.py  (+105 more)
qa/: test_bacnet_enrichment.py  test_cip_enip_enrichment.py  test_critical_fixes.py  test_determinism.py  test_exfil_rendering.py  test_exports.py  test_high_severity_regressions.py  test_medium_regressions.py  test_obfuscation_enrichment.py  test_threats_enrichment.py
tests/: conftest.py  test_cli_packet_raw.py  test_dns_regression.py  test_files_ot.py  test_fuzz_parsers.py  test_ips_regression.py  test_ot_fixtures.py  test_overview.py  test_s7.py  test_smoke_core.py  test_timeline.py  test_udp_regression.py
tests/fixtures/: dns_query_example.pcap.hex
