[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pcapper"
version = "1.0.0"
description = "Modular PCAP analysis CLI"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
dependencies = [
    "scapy>=2.5.0",
    "dpkt>=1.9.8",
    "pydicom>=2.4.4",
    "cryptography>=42.0.0",
    "geoip2>=4.7.0",
    "yara-python>=4.5.0",
    "python-magic>=0.4.27",
    "pefile>=2023.2.7",
    "pyelftools>=0.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "hypothesis>=6.100.0",
]

[project.scripts]
pcapper = "pcapper.cli:main"

[tool.setuptools]
packages = ["pcapper"]
