[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pcapper"
version = "1.4.5"
description = "Modular PCAP analysis CLI"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
keywords = ["pcap", "network", "forensics", "security", "ot", "ics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: System :: Networking :: Monitoring",
]
urls = { Homepage = "https://github.com/SackOfHacks/pcapper", Repository = "https://github.com/SackOfHacks/pcapper", Issues = "https://github.com/SackOfHacks/pcapper/issues" }
dependencies = [
    "cryptography>=42.0.0",
    "dpkt>=1.9.8",
    "geoip2>=4.7.0",
    "pydicom>=2.4.4",
    "scapy>=2.5.0",
    "tomli>=2.0.1; python_version < \"3.11\"",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[project.scripts]
pcapper = "pcapper.cli:main"

[tool.setuptools]
packages = ["pcapper"]
include-package-data = true

[tool.setuptools.package-data]
pcapper = ["*.json"]
